src/test/deca/context/invalid/provided/testi19.deca
class A{}
{
    float x;
    A a = new A();
    x = (float)(a);
}